Closed Bug 1325741 Opened 7 years ago Closed 7 years ago

Failures in 2.0.0/conformance2/textures/image/tex-3d-r16f-red-float.html and others

Categories

(Core :: Graphics: CanvasWebGL, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox51 --- fixed
firefox52 --- fixed
firefox53 --- fixed

People

(Reporter: jgilbert, Assigned: jgilbert)

References

Details

(Whiteboard: gfx-noted)

Attachments

(1 file)

ANGLE doesn't handle uploads from RED/FLOAT into R16F properly, for one.
Blocks: 1325731
All of this changes are for ANGLE. Please send a PR to https://github.com/mozilla/angle as well.
Comment on attachment 8821707 [details]
Bug 1325741 - Handle uploads from RED/FLOAT to R16F, and others. -

https://reviewboard.mozilla.org/r/100884/#review101564

r=me if sending a PR to https://github.com/mozilla/angle.
Attachment #8821707 - Flags: review?(dmu) → review+
Pushed by jgilbert@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/c22ce760279e
Handle uploads from RED/FLOAT to R16F, and others. - r=daoshengmu
https://hg.mozilla.org/mozilla-central/rev/c22ce760279e
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
See Also: → 1377527
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: