Bug 1325741 - Handle uploads from RED/FLOAT to R16F, and others. - r=daoshengmu

MozReview-Commit-ID: 1ef1essxTNV